yaml_configs/wisenet-wave/07-wisenet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisenet-wave-private
  namespace: wisenet-wave
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: wisenet-wave
spec:
  rules:
  - host: wave.kalsi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wisenet-wave
            port:
              number: 7001
